# BSK-InfoBeamerHW-UI-COPO

./: README.md  Themes.slt  platformio.ini  squareline_infobeamer_ui1.sll  squareline_infobeamer_ui1.spj
lib/: lv_conf.h
lib/TFT_eSPI/: User_Setup.h  User_Setup_Select.h
lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_MSG.c  ui_MSG.h  ui_co2menu.c  ui_co2menu.h  ui_comp_hook.c  ui_dmxmenu.c  ui_dmxmenu.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_home.c  ui_home.h  ui_img_1667256483.c  ui_img_1748321345.c  ui_img_95950_png.c  ui_img_bg_png.c  ui_img_bskklein_png.c  ui_img_dmxicon_di_png.c  ui_img_dmxicon_en_png.c  ui_img_fog_png.c  ui_info.c  ui_info.h  ui_mainmenu.c  ui_mainmenu.h  ui_scrload.c  ui_scrload.h  ui_splash.c  ui_splash.h  ui_themes.c  ui_themes.h  ui_valueset.c  ui_valueset.h
src/: loading_texts.h  main.cpp  pin_config.h  text.txt
